--- a/blueBlocks/blueBlocksStyle.css
+++ b/blueBlocks/blueBlocksStyle.css
@@ -11,10 +11,11 @@
 
 
 .sizeWidgets {
-    display: flex;}
+    display: flex;
+}
 
 .widget {
-    width: 450px;
+    width: 100%;
     height: 150px;
     background-color: rgb(24, 65, 103);
     color: white;
